--- a/package.json
+++ b/package.json
@@ -6,11 +6,16 @@
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@mui/material": "^5.4.2",
+    "@stripe/react-stripe-js": "^1.7.0",
+    "@stripe/stripe-js": "^1.24.0",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.26.0",
     "bootstrap": "^5.1.3",
+    "firebase": "^9.6.7",
     "jquery": "^3.6.0",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-currency-format": "^1.1.0",
     "react-dom": "^17.0.2",
