--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jquery": "^3.6.0",
     "moment": "^2.29.1",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.2.1",
     "react-currency-format": "^1.1.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
