--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.0",
     "bootstrap": "^5.1.3",
+    "concurrently": "^7.0.0",
     "firebase": "^9.6.7",
     "jquery": "^3.6.0",
     "moment": "^2.29.1",
@@ -25,10 +26,11 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "backend": "npm start --prefix Backend",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "start": "concurrently \"react-scripts start\" \" npm run backend\""
   },
   "eslintConfig": {
     "extends": [
