Npm issues resolved, readme updated, users removed from add products feature, and other minor issues. Closes #39

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "backend": "npm start --prefix Backend",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
