--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "^5.0.0",
+    "standard": "^16.0.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
